--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
         </div>
 
     </header>
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-8">
+                <h2 class="heading-secondary">
+                    Exciting tours for adventurous people
+                </h2>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
 
-
+                    </div>
+                    <div class="col-6">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
